[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/MultiPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=2]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=3]
[ext_resource path="res://ControllerAdjuster.gd" type="Script" id=4]
[ext_resource path="res://fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://BlackTheme.theme" type="Theme" id=6]
[ext_resource path="res://models/gold.material" type="Material" id=7]
[ext_resource path="res://assets/weightbar.jpg" type="Texture" id=8]
[ext_resource path="res://scenes/ImagePanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/MultiPanelGUI.gd" type="Script" id=10]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=2]
flags = 4
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.01, 0.5 )

[sub_resource type="SphereShape" id=5]
radius = 0.1

[sub_resource type="SphereMesh" id=6]
radius = 0.1
height = 0.2

[sub_resource type="GDScript" id=7]
script/source = "extends Spatial

export(String) var text = \"default\"

var textnode
export(int) var font_size = 32
export(int) var viewport_width = 256
export(int) var viewport_height = 64


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

var viewport

# Called when the node enters the scene tree for the first time.
func _ready():
	viewport = get_node(\"Viewport\")	

	viewport.size = Vector2(viewport_width,viewport_height)

	textnode = viewport.get_node(\"CanvasLayer/Panel/Container/Label\")
	viewport.get_node(\"CanvasLayer/Panel\").rect_size = Vector2(viewport_width/0.8,viewport_height/0.8)
	
	var textmesh = get_node(\"MeshInstance\")

	var font = textnode.get(\"custom_fonts/font\")


	if font.size != font_size:
		#Make a local copy of the texture
		print (\"Font needs copying\")
		#Custom size needs a local copy of the font
		var font_copy = font.duplicate(true)
		textnode.set(\"custom_fonts/font\", font_copy)
		font_copy.size = font_size
		
	textmesh.set_surface_material(0,textmesh.get_surface_material(0).duplicate())
		
	textmesh.mesh.size = Vector2(2, 2*float(viewport_height)/float(viewport_width))
	
	print_info(text)

func print_info(t):
	text = t.replace(\"\\\\n\",\"\\n\")
	textnode.text = text
	viewport.render_target_update_mode = Viewport.UPDATE_ONCE





"

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=10]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=11]
flags = 4
viewport_path = NodePath("ControllerAdjuster/TextElement/Viewport")

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 11 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 512 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="MultiPanel" parent="Viewport/CanvasLayer" instance=ExtResource( 1 )]

[node name="StaticBody" type="StaticBody" parent="."]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00958329, 0 )
shape = SubResource( 4 )

[node name="tl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -0.5 )

[node name="bl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0.5 )

[node name="tr_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -0.5 )

[node name="ControllerAdjuster" type="StaticBody" parent="."]
transform = Transform( 0.922491, 3.09086e-08, -0.386019, 0.386019, -3.09086e-08, 0.922491, 1.65816e-08, -1, -4.04442e-08, 1.2251, 0.00668931, -0.298825 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="ControllerAdjuster"]
shape = SubResource( 5 )

[node name="Sphere" type="MeshInstance" parent="ControllerAdjuster"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.19209e-07 )
mesh = SubResource( 6 )
material/0 = ExtResource( 7 )

[node name="TextElement" type="Spatial" parent="ControllerAdjuster"]
transform = Transform( 0.0864364, 2.98023e-08, -1.11022e-16, 0, -4.37114e-08, -0.0864362, -5.58794e-09, 1, -3.77825e-09, 1.19209e-07, 0, 0.110089 )
script = SubResource( 7 )
viewport_height = 128

[node name="Viewport" type="Viewport" parent="ControllerAdjuster/TextElement"]
size = Vector2( 256, 256 )
msaa = 6
render_target_v_flip = true
render_target_update_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="ControllerAdjuster/TextElement/Viewport"]

[node name="Panel" type="Panel" parent="ControllerAdjuster/TextElement/Viewport/CanvasLayer"]
margin_right = 256.0
margin_bottom = 256.0
custom_styles/panel = SubResource( 8 )

[node name="Container" type="MarginContainer" parent="ControllerAdjuster/TextElement/Viewport/CanvasLayer/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 27.0
theme = ExtResource( 6 )

[node name="Label" type="Label" parent="ControllerAdjuster/TextElement/Viewport/CanvasLayer/Panel/Container"]
margin_right = 165.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 9 )
text = "defaulttext"

[node name="MeshInstance" type="MeshInstance" parent="ControllerAdjuster/TextElement"]
transform = Transform( 1, 4.76837e-07, 0, -1.86265e-09, 1, -3.33067e-16, -5.32907e-15, 2.13163e-14, 1, 0, 0, -1.41491 )
mesh = SubResource( 10 )
material/0 = SubResource( 12 )

[node name="SetWeightBar" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.0866025, -0.05, 0, 0.05, 0.0866025, 0, 0, 0, 0.1, 1.274, 0.047, 2.402 )
image = ExtResource( 8 )

[connection signal="activate_feature" from="Viewport/CanvasLayer/MultiPanel" to="." method="_on_MultiPanel_activate_feature"]
[connection signal="content_changed" from="Viewport/CanvasLayer/MultiPanel" to="Viewport" method="_on_content_changed"]
[connection signal="interface_release" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
[connection signal="selected_by" from="SetWeightBar" to="." method="_on_SetWeightBar_selected_by"]
